<resources>
    <!-- General -->
    <string name="app_name">多宝串</string>

    <!-- Toolbar titles -->
    <string name="toolbar_title_home">多宝串</string>
    <string name="toolbar_title_libirary">素材中心</string>
    <string name="toolbar_title_myalbum">我的相册</string>
    <string name="other_activity">设置</string>

    <!-- Navigation Drawer -->
    <string name="nav_drawer_item_home">首页</string>
    <string name="nav_drawer_item_libirary">素材中心</string>
    <string name="nav_drawer_item_myalbum">我的相册</string>
    <string name="nav_drawer_setup">设置</string>
    <string name="nav_drawer_about">关于</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
    <string name="tools_text_account_information_username">苍井优</string>
    <string name="tools_text_account_information_email">cangjy@sina.com</string>

    <!-- Pull to Refresh -->
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    <string name="pull_to_refresh_pull_label" translatable="false">下拉刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_update_time_label" translatable="false">上次更新时间 </string>
    <string name="pull_to_refresh_load_label" translatable="false">上拉加载更多</string>
    <string name="load_mode_label" translatable="false">加载更多</string>

    <!-- Pearl Bulid -->
    <string name="suzhu_num_hint" translatable="false">请输入个数(10-120)：</string>
    <string name="suzhu_num" translatable="false">输入颗数：</string>
    <string name="unit" translatable="false">颗</string>
    <string name="diameter" translatable="false">输入素材直径</string>
    <string name="shape" translatable="false">形状 </string>
    <string name="preview_button">预览</string>
    <string name="add_suzhu">添加素珠</string>

    <!-- home fragment -->
    <string name="fast_start">快速换珠</string>
    <string name="library">素材中心</string>
    <string name="pearl_build">自由组珠</string>
    <string name="material_build">素材制作</string>
    <string name="myalbum">我的相册</string>
    <string name="personal_activity">个人信息</string>

    <string name="library_detail">素材详情</string>
    <string name="library_display">素材展示</string>
    <!-- Typeface names -->
    <!--<string name="typeface_roboto_regular">Roboto-Regular</string>-->
    <!--<string name="typeface_roboto_medium">Roboto-Medium</string>-->


    <!-- image set -->
    <string name="scale">比例</string>
    <string name="crop_button">确定剪裁</string>
    <string name="brightness">亮度</string>
    <string name="saturation">饱和度</string>
    <string name="contrast">对比度</string>
    <string name="ruler_sumary">用白框框选出要替换的素材，并输入尺寸</string>

    <!-- picture select dialog names -->
    <string name="dialog_setting_head_title">请选择底图</string>
    <string name="dialog_choose_camera">拍照</string>
    <string name="dialog_choose_picture">从相册导入</string>
    <string name="common_dialog_cancel_btn_text">取消</string>
    <!-- Login  -->
    <string name="login_phone">请输入手机号码</string>
    <string name="login_authcode">请输入验证码</string>
    <string name="login_underlogo">Sign in</string>
    <string name="action_settings">Settings</string>
    <string name="login_tip">点击即表示同意</string>
    <string name="login_tip_link">《多宝串用户协议》</string>
    <string name="about">关于</string>
    <!--<string name="title_activity_home">HomeActivity</string>-->
    <!--<string name="hello_world">Hello world!</string>-->

    <!--<string name="about_body"><![CDATA[-->
         <!--多宝串<a href="http://www.amoluo.com">静下来，做真实的自己</a>.<br/>-->
        <!--<a href=\'http://www.amoluo.com\'>http://www.amoluo.com/</a>-->
    <!--]]></string>-->

    <!-- Register  -->
    <string name="register_title">注册账户</string>
    <string name="register_num">手机号</string>
    <string name="register_securitynum">验证码</string>
    <string name="register_get">获取</string>
    <string name="register_reget">再次获取</string>
    <string name="register_username">用户名</string>
    <string name="register_psd">密码</string>
    <string name="register_repsd">再次输入密码</string>
    <string name="register_put">注  册</string>



    <string name="title_activity_image_set">ImageSetActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_imagetest">imagetestActivity</string>
    <string name="title_activity_libirary">素材中心</string>
    <string name="title_activity_splash">SplashActivity</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_libirarydisplay">LibirarydisplayActivity</string>

    <!-- gridview -->
    <string-array name="image_ids">
        <item>@drawable/demo1</item>
        <item>@drawable/demo2</item>
        <item>@drawable/demo3</item>
        <item>@drawable/demo4</item>
        <item>@drawable/demo5</item>
        <item>@drawable/demo6</item>
        <item>@drawable/demo7</item>
        <item>@drawable/demo8</item>
        <item>@drawable/demo9</item>
        <item>@drawable/demo10</item>
        <item>@drawable/demo11</item>
        <item>@drawable/demo12</item>
        <item>@drawable/demo4</item>
        <item>@drawable/demo5</item>
        <item>@drawable/demo6</item>
        <item>@drawable/demo7</item>
        <item>@drawable/demo8</item>
        <item>@drawable/demo9</item>
    </string-array>
    <string name="title_activity_libirary_detail">LibiraryDetailActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_image_allocate">ImageAllocateActivity</string>

    <string-array name="pearbuildstyle">
        <item>圆形</item>
        <item>椭圆</item>
        <item>方形</item>
    </string-array>
    <string name="title_activity_personal">PersonalActivityActivity</string>
    <string name="title_activity_login_activity_t">LoginActivityT</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_user_edit">UserEditActivity</string>

    <string-array name="cutoutsave_type">
        <item>佛头</item>
        <item>佛塔</item>
        <item>背云</item>
        <item>卡子</item>
        <item>弟子珠</item>
        <item>计数器</item>
        <item>项珠</item>
        <item>绳结</item>
        <item>散珠</item>
        <item>隔片</item>
    </string-array>

</resources>
