<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <!--actionbar里面有返回btn和注册账号title-->
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/actionbar">
        <ImageButton
            android:id="@+id/btn_register_back"
            android:layout_width="@dimen/btn_outter"
            android:layout_height="@dimen/btn_outter"
            android:background="@drawable/selector_common_pressed_50_back"
            android:src="@drawable/icon_back"
            android:layout_gravity="left|center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_large"
            android:textStyle="bold"/>
    </FrameLayout>


    <!-- 填写框-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:background="@drawable/cube_transparentwhite"
        android:layout_gravity="center|top"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <!--相机横组-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <!--相机-->
            <ImageButton
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:background="@drawable/selector_common_pressed_50_back"
                android:src="@drawable/icon_camera"
                android:layout_gravity="center"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="fill_parent"
                android:background="@color/white"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:hint="@string/register_num"
                    android:layout_gravity="left"
                    android:gravity="left|center"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/gray_10"
                    android:background="@null"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_medium"
                    android:inputType="number"
                    />
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/white"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <EditText
                        android:id="@+id/edt_sms_pcd"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.6"
                        android:hint="@string/register_securitynum"
                        android:layout_gravity="left"
                        android:gravity="left|center"
                        android:paddingLeft="10dp"
                        android:textColorHint="@color/gray_10"
                        android:background="@null"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textsize_medium"
                        android:inputType="number"
                        />
                    <Button
                        android:id="@+id/btn_getsmspcd"
                        android:layout_width="80dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center|right"
                        android:layout_marginRight="10dp"
                        android:text="@string/register_get"
                        android:textSize="@dimen/textsize_small"
                        android:textColor="@color/white"
                        android:background="@drawable/btn_brightgreen_green_rectangle"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/white"/>
        <!--用户名-->
        <EditText
            android:id="@+id/edt_username"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/register_username"
            android:layout_gravity="left"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColorHint="@color/gray_10"
            android:background="@null"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_medium"
            />
        <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"/>
        <!-- 密码第一次-->
        <EditText
            android:id="@+id/edt_psd"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/register_psd"
            android:layout_gravity="left"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColorHint="@color/gray_10"
            android:background="@null"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_medium"
            android:inputType="numberPassword"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/white"/>
        <!-- 密码第二次-->
        <EditText
            android:id="@+id/edt_psd_en"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/register_repsd"
            android:layout_gravity="left"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColorHint="@color/gray_10"
            android:background="@null"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_medium"
            android:inputType="numberPassword"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_brightgreen_green_rectangle"
        android:text="@string/register_put"
        android:textStyle="bold"
        android:textSize="@dimen/textsize_large"/>

</LinearLayout>