<?xml version="1.0" encoding="utf-8"?>

<u.can.i.up.ui.customViews.ScrimInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_navigation_drawer_rootLayout"
    style="@style/ScrimInsetsLayout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/navigation_drawer_account_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_account_section_default_height"
            android:clickable="true"
            android:background="@color/toolbar_background"
            tools:layout_height="@dimen/navigation_drawer_account_section_default_height">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@color/black_alpha_50">

                <!--<com.android.volley.toolbox.NetworkImageView-->
                    <!--android:id="@+id/navigation_drawer_user_account_picture_cover"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@color/toolbar_background"-->
                    <!--android:scaleType="centerCrop"-->
                    <!--tools:ignore="ContentDescription" />-->

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/navigation_drawer_account_section"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/nav_drawer_vertical_spacing_listing"
                android:paddingEnd="@dimen/nav_drawer_vertical_keyline_right"
                android:paddingLeft="@dimen/nav_drawer_vertical_keyline_icon_left"
                android:paddingRight="@dimen/nav_drawer_vertical_keyline_right"
                android:paddingStart="@dimen/nav_drawer_vertical_keyline_icon_left">

                <LinearLayout
                    android:id="@+id/navigation_drawer_account_information"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navigation_drawer_account_information_height"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/navigation_drawer_account_information_display_name"
                        style="@style/NavDrawerAccountInfoText"
                        android:text="@string/tools_text_account_information_username"
                        tools:fontFamily="sans-serif-medium"/>

                    <TextView
                        android:id="@+id/navigation_drawer_account_information_email"
                        style="@style/NavDrawerAccountInfoText"
                        android:text="@string/tools_text_account_information_email"
                        tools:fontFamily="sans-serif"/>

                </LinearLayout>

                <!--<ImageView-->
                    <!--android:id="@+id/navigation_drawer_user_account_picture_profile"-->
                    <!--android:layout_width="@dimen/navigation_drawer_profile_image_size"-->
                    <!--android:layout_height="@dimen/navigation_drawer_profile_image_size"-->
                    <!--android:layout_above="@id/navigation_drawer_account_information"-->
                    <!--android:src="@drawable/ic_account_circle_demo" />-->

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/navigation_drawer_user_account_picture_profile"
                    android:layout_width="@dimen/navigation_drawer_profile_image_size"
                    android:layout_height="@dimen/navigation_drawer_profile_image_size"
                    android:layout_above="@id/navigation_drawer_account_information"
                    android:src="@drawable/ic_account_circle_demo" />
                <Button
                    android:id="@+id/search_user"
                    android:layout_width="@dimen/junior_btn_size"
                    android:layout_height="@dimen/junior_btn_size"
                    android:layout_alignTop="@+id/navigation_drawer_user_account_picture_profile"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/btn_search"
                    android:layout_gravity="right"
                    />

                <!--<SearchView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/searchView"-->
                    <!--android:layout_alignTop="@+id/navigation_drawer_user_account_picture_profile"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_alignParentEnd="true" />-->

            </RelativeLayout>

        </FrameLayout>

        <!-- Drawer items -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/toolbar_background"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/nav_drawer_vertical_spacing_listing"
            android:paddingTop="@dimen/nav_drawer_vertical_spacing_listing">

            <LinearLayout
                android:id="@+id/navigation_drawer_linearLayout_entries_root_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_home"
                    style="@style/NavDrawerRowLayout.Main">

                    <u.can.i.up.ui.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_home"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/btn_lux_true"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_home"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_home"
                        tools:fontFamily="sans-serif-medium"
                        tools:textColor="@color/nav_drawer_item_text_selected"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_libirary"
                    style="@style/NavDrawerRowLayout.Main" >

                    <u.can.i.up.ui.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_libirary"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/btn_lib_ture"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_libirary"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_libirary"
                        tools:fontFamily="sans-serif-medium"/>

                </FrameLayout>

                <include
                    layout="@layout/navigation_drawer_divider"/>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_setup"
                    style="@style/NavDrawerRowLayout.Secondary">

                    <u.can.i.up.ui.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_setup"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/btn_setting_true"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_setup"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_setup"
                        tools:fontFamily="sans-serif-medium" />

                </FrameLayout>
                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_about"
                    style="@style/NavDrawerRowLayout.Secondary">

                    <u.can.i.up.ui.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_about"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/btn_about_true"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_about"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_about"
                        tools:fontFamily="sans-serif-medium" />

                </FrameLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</u.can.i.up.ui.customViews.ScrimInsetsFrameLayout>